// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptVersion rendering tests PromptVersion - isCurrent false - rendered test 1`] = `
<div>
  <div
    class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
    data-testid="prompt-version"
  >
    <button
      class="w-full px-4 py-3 flex items-center justify-between gap-4 hover:bg-slate-100 transition-colors text-left cursor-pointer"
      data-testid="expand-btn"
    >
      <div
        class="flex items-center gap-3 min-w-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4 shrink-0 text-slate-600"
          data-testid="chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="font-medium text-slate-900"
        >
          v
          1
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm text-slate-600 shrink-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          27. Sept. 2025, 02:00 AM
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`PromptVersion rendering tests PromptVersion - isCurrent true - rendered test 1`] = `
<div>
  <div
    class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
    data-testid="prompt-version"
  >
    <button
      class="w-full px-4 py-3 flex items-center justify-between gap-4 hover:bg-slate-100 transition-colors text-left cursor-pointer"
      data-testid="expand-btn"
    >
      <div
        class="flex items-center gap-3 min-w-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4 shrink-0 text-slate-600"
          data-testid="chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="font-medium text-slate-900"
        >
          v
          1
        </span>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90"
          data-slot="badge"
        >
          Aktuell
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm text-slate-600 shrink-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          27. Sept. 2025, 02:00 AM
        </span>
      </div>
    </button>
  </div>
</div>
`;
